--- a/SmartMenuAp/SmartMenuAp.csproj
+++ b/SmartMenuAp/SmartMenuAp.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FunctionLibrary">
+      <HintPath>..\..\SmartMenuApp\FunctionLibrary\bin\Debug\FunctionLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="SmartMenuLibrary">
+      <HintPath>..\..\SmartMenuLibrary\SmartMenuLibrary\bin\Debug\SmartMenuLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bindings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
